--- a/estilos.css
+++ b/estilos.css
@@ -4,3 +4,70 @@
     padding: 0;
     font-family: sans-serif;
 }
+
+body {
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgba(238,240,241,1) 27%, rgba(99,103,103,1) 100%);
+}
+
+header {
+    text-align: center;
+}
+
+nav {
+
+}
+
+li {
+    display: inline;
+    float: left;
+}
+
+a {
+    display: block;
+  padding: 8px;
+  background-color: #333;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+
+.imgarticle {
+    border-radius: 10px;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.imgarticle:hover {
+    transform: translateX(300px);
+    transition: all 3s ease-in-out;
+}
+
+section {
+
+}
+
+article {
+    text-align: center;
+}
